@@ -2,6 +2,14 @@
 
 	Backport:
 
+	2004-11-25  Mark Mitchell  <mark@codesourcery.com>
+	PR c++/18545
+	* typeck.c (check_return_expr): Robustify.
+
+2005-09-01  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	Backport:
+
 	2005-02-22  Mark Mitchell  <mark@codesourcery.com>
 	PR c++/20153
 	* decl2.c (build_anon_union_vars): Add type parameter.
